Fixed timing issues, image now swivels from the center when zoomed in intstead of right.
Needs even more refactoring, and doesn’t work properly in Firefox or
iOS Safari; card-back image isn’t seen, the card merely flips over with
a reverse-image of the original picture.

Card-overlap has been fixed, however.

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -32,6 +32,7 @@
 .flip-card {
     width: 223px;
     height: 310px;
+    perspective: 2000px;
 }
   
 .flip-card-inner {
